add homework 4-debugging-exceptions

--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="./3-loops-funcs.js"></script>
+    <script src="./4-debugging-exceptoins.js"></script>
 </body>
 </html>
