added homework 5-oop

--- a/oop/index.html
+++ b/oop/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="./4-debugging-exceptoins.js"></script>
+    <script src="./5-OOP.js"></script>
 </body>
 </html>
